Fix CI pipeline configuration file